--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=authentication-service
-spring.datasource.url = jdbc:mysql://localhost:3306/javatechie
-spring.datasource.username = root
-spring.datasource.password = Password
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+server.port=8283
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/SensorSync
+spring.datasource.username=postgres
+spring.datasource.password=5391
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
