--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-spring.application.name=authentication-service
-server.port=8283
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/SensorSync
-spring.datasource.username=postgres
-spring.datasource.password=5391
-spring.jpa.hibernate.ddl-auto=none
+spring.application.name = authentication-service
+server.port = 8283
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/SensorSync
+spring.datasource.username = postgres
+spring.datasource.password = Sumsar150900
+spring.datasource.dbcp2.driver-class-name = org.postgresql.Driver
+
+# "create-drop" should be changed for prod
+spring.jpa.hibernate.ddl-auto = create-drop
+# Show sql for DEBUG -> for prod false
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.database = postgresql
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 
 spring.sql.init.mode=always
