--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.url = jdbc:postgresql://${DB_HOST:localhost}:5432/SensorSync
 spring.datasource.username = ${DB_USER:postgres}
 spring.datasource.password = ${DB_PASSWORD:Sumsar150900}
 
+eureka.client.service-url.defaultZone = ${SERVICE_REGISTRY_URL:http://localhost:8761}/eureka/
+
 # "create-drop" should be changed for prod
 spring.jpa.hibernate.ddl-auto = create-drop
 # Show sql for DEBUG -> for prod false
