--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name = authentication-service
 server.port = 8283
 spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://${DB_HOST:localhost}:5432/SensorSync
+spring.datasource.url = jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:SensorSync}
 spring.datasource.username = ${DB_USER:postgres}
-spring.datasource.password = ${DB_PASSWORD:Sumsar150900}
+spring.datasource.password = ${DB_PASSWORD:pass}
 
 eureka.client.service-url.defaultZone = ${SERVICE_REGISTRY_URL:http://localhost:8761}/eureka/
 
