--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.password = 5391
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.connection.driver_class=org.postgresql.Driver
 
-spring.sql.init.mode = never
-spring.jpa.hibernate.ddl-auto = none
+spring.sql.init.mode = always
+spring.jpa.hibernate.ddl-auto = update
 
 eureka.client.service-url.defaultZone = ${SERVICE_REGISTRY_URL:http://localhost:8761}/eureka/
 
